# kitchen-activity-detection-mlx90640-thingy91

./: .gitignore  README.md  key_ecdsa-256.c  key_ecdsa-256.pem
dataCollector/: CMakeLists.txt  Kconfig  overlay-ble.conf  overlay-debug.conf  prj.conf  sample.yaml
dataCollector/boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
dataCollector/config/: buttons_def.h  led_state_def.h  led_states.h
dataCollector/src/: control.c  main.c  shell_commands.c
documentation/: Component Diagram - Unfinished.plantuml  Component Diagram and Schematic.drawio  Configure Sensor by BLE.plantuml  Cyclic Sensor Reading nrf9160 Environment Sensors.plantuml  Cyclic Sensor Reading.plantuml  Firmware Update.plantuml  GettingStarted.txt  SchematicDatacollector.drawio  companionAppStatemachine.plantuml  startup nRF52840.plantuml  startup nRF9160.plantuml
documentation/research/: atCommands
heaty_companion/: pubspec.yaml
heaty_companion/lib/: main.dart
heaty_companion/test/: statemachine_test.dart  widget_test.dart
modules/: CMakeLists.txt  Kconfig.myModules  usb_console.c  usb_console.h  util_gpio.c  util_gpio.h  util_settings.c  util_settings.h  utils.c  utils.h
modules/bt/: CMakeLists.txt  Kconfig.bt_module  bt_module.c  bt_module_event.c  bt_module_event.h  camera_service.c  camera_service.h  heaty_service.c  heaty_service.h  serial_nrf91_bridge_service.c  time_service.c  (+2 more)
nrf52840/: CMakeLists.txt  Kconfig  eeMLX90640  overlay-ble.conf  overlay-credentials.conf  overlay-debug.conf  overlay-dfu.conf  overlay-memfault.conf  prj.conf  sample.yaml
nrf52840/boards/: thingy91_nrf52840.overlay
nrf52840/child_image/: mcuboot.conf
nrf52840/config/: memfault_metrics_heartbeat_config.def  memfault_trace_reason_user_config.def
nrf52840/src/: main.c  shell_commands.c
nrf52840/src/commCtrl/: Kconfig.commCtrl_module  commCtrl_module.c  commCtrl_module_event.c  commCtrl_module_event.h
nrf52840/src/commCtrl/bridge/events/: CMakeLists.txt  Kconfig  ble_data_event.c  ble_data_event.h  cdc_data_event.c  cdc_data_event.h  peer_conn_event.c  peer_conn_event.h  uart_data_event.c  uart_data_event.h
nrf52840/src/commCtrl/bridge/modules/: CMakeLists.txt  Kconfig  uart_handler.c  usb_cdc_handler.c
nrf9160_ns/: CMakeLists.txt  Kconfig  overlay-credentials.conf  overlay-memfault.conf  overlay-watchdog.conf  prj.conf  sample.yaml
scripts/: ble_getCameraImage.py  ble_getHeatmap.py  ble_getHeatmapRAW.py  ble_nrf52840_shell.py  ble_nrf9160_shell.py  ble_nrf9160_shell_forMcuboot.py  ble_uploadMemfault.py  flashDevice.sh  generatePlantUML.sh  requirements.txt  source_env_build_nrf52840.sh  source_env_build_nrf9160_ns.sh  source_env_scripts.sh
test/: testHeatMapData.h  testMapImageGrey_decoded.h  testMapImage_decoded.h  testMapImage_encoded.h
(+106 files in other folders)
